--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  "type": "module",
   "devDependencies": {
-    "vitepress": "1.0.0-beta.2"
+    "vitepress": "1.0.0-rc.4"
   },
   "scripts": {
     "dev": "vitepress dev",
